@@ -103,11 +103,14 @@ def query_instance(inst):
 
     # Determine type of server
     server_info = fetch_var(inst["server"], inst["port"], "", inst["suburi"], "")
+
     sys.stdout.write('<<<jolokia_info>>>\n')
     if server_info:
        d = dict(server_info)
        version = d.get(('info', 'version'), "unknown")
        product = d.get(('info', 'product'), "unknown")
+       if inst.has_key("product"):
+           product = inst["product"]
        agentversion = d.get(('agent',), "unknown")
        sys.stdout.write("%s %s %s %s\n" % (inst["instance"], product, version, agentversion))
     else:
@@ -134,6 +137,9 @@ def query_instance(inst):
         for subinstance, value in values:
             if not subinstance and not title:
                 print "INTERNAL ERROR: %s" % value
+                continue
+
+            if "threadStatus" in subinstance or "threadParam" in subinstance:
                 continue
 
             if len(subinstance) > 1:
@@ -170,6 +176,8 @@ global_vars = [
   ( "java.lang:type=Threading/PeakThreadCount",           "PeakThreadCount",         [] ),
   ( "java.lang:type=Threading/TotalStartedThreadCount",   "TotalStartedThreadCount", [] ),
   ( "java.lang:type=Runtime/Uptime",                      "Uptime",                  [] ),
+  ( "java.lang:type=GarbageCollector,name=*/CollectionCount",             "",        [] ),
+  ( "java.lang:type=GarbageCollector,name=*/CollectionTime",             "",         [] ),
 ]
 
 
@@ -189,7 +197,9 @@ specific_vars = {
       ( "*:j2eeType=Servlet,name=default,*/stateName", None, [ "WebModule" ] ),
       # Check not yet working
       ( "*:j2eeType=Servlet,name=default,*/requestCount", None, [ "WebModule" ]),
-
+      ( "*:name=*,type=ThreadPool/maxThreads", None, []),
+      ( "*:name=*,type=ThreadPool/currentThreadCount", None, []),
+      ( "*:name=*,type=ThreadPool/currentThreadsBusy", None, []),
      # too wide location for addressing the right info
      # ( "*:j2eeType=Servlet,*/requestCount", None, [ "WebModule" ] ),
 
