@@ -30,6 +30,9 @@ def inventory_jolokia_info(info):
 def check_jolokia_info(item, _no_params, info):
     for line in info:
         if line[0] == item:
+            if line[1] == 'ERROR' or len(line) < 4:
+                return (2, "Jolokia not running")
+
             product, version, jolokia_version = line[1:]
             return (0, "%s %s (Jolokia version %s)" % (
                 product.title(), version, jolokia_version))
