@@ -29,6 +29,7 @@
     * 0179 check_dns: It is now possible to use the local dns server in wato configuration...
     * 1058 livedump-mail-fetch: Now supporting either quoted-printable or non encoded mails...
     * 0180 sap: It is now possible to add multiple sap instances to the sap.cfg file...
+    * 0637 jolokia_metrics.gc, jolokia_metrics.tp, jolokia_info: two new subchecks for the jolokia_metrics checks and better error handling for jolokia_info...
     * 0994 FIX: agent plugin smart: fixed syntax error
     * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
     * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
